[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["Juan Bernardo Benavides Rubio <jbbenavidesr@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
